# solana-mev-agent-py

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.internal/: CONTRIBUTING.md  logo.txt  spacer.txt
orders_templates/: README.md  example_batch.json
src/: main.py
src/agents/: aleph.py  base.py  main.py
src/liquidity/: base.py  jupiter.py
src/liquidity/cexes/: binance.py
src/oracles/: dexscreener.py  helius.py  pyth.py
src/orders/: batch.py  intent.py  quote.py  solution.py
src/p2p/: level_one.py
src/protocol_server/: _server.py
src/protocol_server/templates/: batches.html  index.html  solutions.html
src/protocol_server/utils/: file_operations.py  server_utils.py
src/sol/: accounts.py  base.py  blocks.py  transactions.py
src/utils/: config.py  logging.py  maths.py  network.py  system.py
tests/: test.json  test_aleph.py  test_cli.py  test_server.py
